# afrl_bluerov

./: .clang-format  .gitignore  .gitmodules  README.md
bluerov_bringup/: CMakeLists.txt  package.xml
bluerov_bringup/launch/: bag_recorder.launch  bluerov_bringup.launch  bluerov_tag_detector.launch  mavros.launch
bluerov_bringup/scripts/: bag_recorder.sh  bluerov_bringup.sh  camera.sh  gui.sh  imu.sh  mavros.sh  tags.sh  tf_broadcaster.sh
bluerov_control/: CMakeLists.txt  package.xml
bluerov_control/config/: f710_joy.yaml
bluerov_control/launch/: bluerov_joy_control.launch
bluerov_control/scripts/: bluerov_teleop.py  test_motors.py
bluerov_control_ros/: CMakeLists.txt  package.xml
bluerov_control_ros/config/: bluerov_control.yaml  rosconsole.conf  teleop.rviz
bluerov_control_ros/include/: MotorControl.h  MotorUtils.h  Primitives.h  Publisher.h  Utils.h
bluerov_control_ros/launch/: bluerov_joy_control.launch  bluerov_lawnmower.launch  bluerov_square.launch  bluerov_teleop.launch  bluerov_tf_broadcaster.launch  bluerov_transect.launch  test_orientation.launch
bluerov_control_ros/motor_control/: CMakeLists.txt
bluerov_control_ros/motor_control/include/: MotorControl.h  MotorUtils.h
bluerov_control_ros/motor_control/src/: MotorControl.cpp
bluerov_control_ros/scripts/: bluerov_square_node.py  bluerov_teleop.py  bluerov_teleop_2.py  bluerov_teleop_alt.py  idle_motor_commands.py  test_motors.py
bluerov_control_ros/src/: MotorControl.cpp  Primitives.cpp  Publisher.cpp  Utils.cpp  bluerov_lawnmower_node.cpp  bluerov_primitives_node.cpp  bluerov_square_node.cpp  bluerov_transect_node.cpp  test_absolute_orientation.cpp  tf_broadcaster.cpp
bluerov_gui_ros/: CMakeLists.txt  package.xml  setup.py
bluerov_gui_ros/launch/: bluerov.launch
bluerov_gui_ros/resource/: bluerov.ui
bluerov_gui_ros/scripts/: gui.py
bluerov_gui_ros/src/bluerov_gui/: bluerov_gui.py  bluerov_menu.py  generic.py
bluerov_gui_ros/srv/: ChangeParameter.srv
bluerov_mavros/: CMakeLists.txt  package.xml
bluerov_mavros/include/: JoystickParams.h
bluerov_mavros/launch/: apm_pluginlists.yaml  bluerov_startup.launch
bluerov_mavros/src/: Joystick.cpp
docs/: teleop_howto.md
flir_camera_driver/spinnaker_camera_driver/: CMakeLists.txt
flir_camera_driver/spinnaker_camera_driver/cfg/: Spinnaker.cfg  Spinnaker_orig.cfg
flir_camera_driver/spinnaker_camera_driver/include/spinnaker_camera_driver/: BlueROVCamera.h  SpinnakerCamera.h  camera.h  camera_exceptions.h  cm3.h  diagnostics.h  get_property.h  gh3.h  set_property.h
flir_camera_driver/spinnaker_camera_driver/launch/: bluerov.launch  camera.launch
flir_camera_driver/spinnaker_camera_driver/src/: BlueROVCamera.cpp  SpinnakerCamera.cpp  camera.cpp  cm3.cpp  gh3.cpp  nodelet.cpp
spinnaker_camera_driver/: CMakeLists.txt
spinnaker_camera_driver/cfg/: Spinnaker.cfg  rosconsole.conf
spinnaker_camera_driver/cmake/: download_spinnaker
spinnaker_camera_driver/cmake/modules/: FindSpinnaker.cmake
spinnaker_camera_driver/include/spinnaker_camera_driver/: BlueROVCamera.h  SpinnakerCamera.h  camera.h  camera_exceptions.h  cm3.h  diagnostics.h  get_property.h  gh3.h  set_property.h
spinnaker_camera_driver/launch/: bluerov.launch
spinnaker_camera_driver/params/: bluerov_air.yaml
spinnaker_camera_driver/src/: BlueROVCamera.cpp  SpinnakerCamera.cpp  camera.cpp  cm3.cpp  diagnostics.cpp  gh3.cpp  node.cpp  nodelet.cpp  spinnaker_test_node.cpp
