<package format="2">
  <name>bluerov_control_ros</name>
  <version>0.0.1</version>
  <description>BlueROV control.</description>

  <author email="bjoshi@email.sc.edu">Bharat Joshi</author>
  <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/spinnaker_camera_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>joy</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>

