<?xml version="1.0"?>

<package format="2">
  <name>bluerov_mavros</name>
  <version>0.0.1</version>
  <description>BlueROV mavros client.</description>

  <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/spinnaker_camera_driver</url>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros</depend>


  <test_depend>roslaunch</test_depend>

</package>

